<resources>
    <string name="app_name">Activity Tracker</string>
    <string name="label_best_tracker">Пожалуй, лучший фитнес трекер в ДВФУ</string>
    <string name="label_who_created">Созданный студентами 2 - го курса</string>
    <string name="label_registration">Зарегистрироваться</string>
    <string name="label_have_an_account">Уже есть аккаунт?</string>
    <string name="tool_bar_registration">Регистрация</string>
    <string name="tool_bar_login">Вход</string>
    <string name="label_login">Логин</string>
    <string name="label_login_login">Войти</string>
    <string name="label_name">Имя или никнейм</string>
    <string name="label_password">Пароль</string>
    <string name="label_password_again">Повторите пароль</string>
    <string name="label_sex">Пол</string>
    <string name="label_sex_male">Мужской</string>
    <string name="label_sex_female">Женский</string>
    <string name="label_sex_other">Другое</string>
    <string name="label_registration_agreement">Нажимая на кнопку, вы соглашаетесь с <a href="http://google.com/">политикой
        конфиденциальности</a> и обработкой персональных данных, а также принимаете
        <a href="http://google.com/">пользовательское соглашение</a></string>
    <string name="label_time_to_train">Время потренить</string>
    <string name="label_activity">Активность</string>
    <string name="label_profile">Профиль</string>
    <string name="label_my_activities">Мои активности</string>
    <string name="label_my">Мои</string>
    <string name="label_users_activities">Активности пользователей</string>
    <string name="label_users">Пользователей</string>
    <string name="label_Time">Время</string>
    <string name="label_time">время</string>
    <string name="label_distance">Расстояние</string>
    <string name="label_start">Старт</string>
    <string name="label_finish">Финиш</string>
    <string name="label_or">|</string>
    <string name="label_comment">Комментарий</string>
    <string name="label_user">Пользователь</string>
    <string name="label_date">Дата</string>
</resources>