<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/backLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:title="@string/tool_bar_registration"
        app:titleMarginStart="50dp"/>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/invisibleButton"
        style="@style/Widget.MaterialComponents.Button.TextButton"
        android:layout_width="31dp"
        android:layout_height="25dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"


        app:icon="@drawable/ic_back"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ScrollView
        android:layout_width="0dp"
        android:layout_height="0dp"

        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@id/backLayout">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingHorizontal="20dp">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/registration_login_layout"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"

                android:hint="@string/label_login"

                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/registration_login_edit"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/registration_name_layout"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"

                android:hint="@string/label_name"

                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/registration_login_layout">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/registration_name_edit"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/registration_password_layout"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                app:passwordToggleEnabled="true"

                android:hint="@string/label_password"

                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/registration_name_layout">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/registration_password_edit"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:drawableRight="@drawable/ic_eye"/>


            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/registration_password_again_layout"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                app:passwordToggleEnabled="true"

                android:hint="@string/label_password_again"

                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/registration_password_layout">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/registration_password_again_edit"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:drawableRight="@drawable/ic_eye"/>

            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:id="@+id/registration_sex_layout"

                android:layout_marginTop="16dp"

                android:text="@string/label_sex"
                android:textStyle="bold"

                android:textAlignment="viewStart"

                android:textColor="@color/black"
                android:textSize="16sp"

                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/registration_password_again_layout" />

            <RadioGroup
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:id="@+id/radio_group"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/registration_sex_layout"
                android:theme="@style/Widget.AppCompat.CompoundButton.RadioButton">

                <com.google.android.material.radiobutton.MaterialRadioButton
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:id="@+id/registration_sex_male"

                    android:text="@string/label_sex_male"
                    android:textColor="@color/black"
                    android:textSize="14sp"
                    android:buttonTint="@color/purple_500"
                    android:shadowColor="@color/purple_500"

                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/registration_sex_layout" />

                <com.google.android.material.radiobutton.MaterialRadioButton
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:id="@+id/registration_sex_female"

                    android:text="@string/label_sex_female"
                    android:textColor="@color/black"
                    android:textSize="14sp"
                    android:buttonTint="@color/purple_500"
                    android:shadowColor="@color/purple_500"

                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/registration_sex_male" />

                <com.google.android.material.radiobutton.MaterialRadioButton
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:id="@+id/registration_sex_other"

                    android:text="@string/label_sex_other"
                    android:textColor="@color/black"
                    android:textSize="14sp"
                    android:buttonTint="@color/purple_500"
                    android:shadowColor="@color/purple_500"

                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/registration_sex_female" />
            </RadioGroup>


            <com.google.android.material.button.MaterialButton
                android:id="@+id/registrationView"
                android:layout_width="0dp"
                android:layout_height="wrap_content"

                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp"

                android:text="@string/label_registration"
                android:textAlignment="center"
                android:textAllCaps="false"
                android:textSize="14sp"

                app:cornerRadius="4dp"

                android:paddingTop="12dp"
                android:paddingBottom="12dp"

                android:paddingLeft="24dp"
                android:paddingRight="24dp"
                android:textColor="@color/white"

                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/radio_group" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/registration_agreement"
                android:text="@string/label_registration_agreement"
                android:layout_marginTop="8dp"
                android:textAlignment="center"
                android:textColorLink="@color/purple_700"
                android:textSize="12sp"

                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/registrationView"/>
        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>