<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <ImageView
        android:id="@+id/welcomeView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginStart="16dp"

        android:layout_marginTop="4dp"

        android:layout_marginEnd="16dp"
        android:src="@drawable/ic_welcome"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/bestTrackerView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"

        android:layout_marginStart="16dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="16dp"
        android:fontFamily="Inter"
        android:text="@string/label_best_tracker"
        android:textAlignment="center"

        android:textColor="@color/black"

        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/welcomeView" />

    <TextView
        android:id="@+id/whoCreatedView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:fontFamily="Inter"
        android:text="@string/label_who_created"

        android:textAlignment="center"

        android:textColor="@color/grey"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/bestTrackerView" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/registrationView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"

        android:layout_marginStart="97dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="96dp"

        android:text="@string/label_registration"
        android:textAlignment="center"
        android:textAllCaps="false"
        android:textSize="14sp"

        app:cornerRadius="4dp"

        android:paddingTop="12dp"
        android:paddingBottom="12dp"

        android:paddingLeft="24dp"
        android:paddingRight="24dp"
        android:textColor="@color/white"

        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/whoCreatedView" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/haveAnAccountView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"

        android:layout_marginStart="16dp"
        android:layout_marginTop="28dp"
        android:layout_marginEnd="16dp"

        android:text="@string/label_have_an_account"
        android:textAlignment="center"
        android:textAllCaps="false"
        android:textSize="16sp"

        android:textColor="@color/purple_500"
        android:background="@color/white"
        style="@style/Widget.MaterialComponents.Button.TextButton"

        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/registrationView" />


</androidx.constraintlayout.widget.ConstraintLayout>